<resources>
    <string name="app_name">ITS Bus</string>

    <string name="menuTrack">Bus Tracker</string>
    <string name="menuSchedule">Route</string>
    <string name="menuAbout">About</string>
    <string name="menuSetting">Setting</string>
    <string name="title_activity_maps">Bus Tracker</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_schedule">Route</string>

    <!-- Strings related to Settings -->
    <string name="pref_theme">Themes</string>
    <string name="pref_theme_default">default</string>
    <string name="pref_theme_summary">Change theme of this apps.</string>
    <string-array name="pref_theme">
        <item>Default</item>
        <item>Pink</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>default</item>
        <item>pink</item>
        <item>dark</item>
    </string-array>

    <!-- Strings related to About -->
    <string name="title_about_version">Current Version</string>
    <string name="about_version">1.0.0</string>
    <string name="title_team">Developed by</string>
    <string name="team1">Muhajir Bin Abd. Latif</string>
    <string name="team2">Ananda Afryan Gemilang</string>
    <string name="team3">Bagus Aji Sinto Susilo</string>
    <string name="team4">Rifka Annisa</string>
    <string name="team5">Naufal Andira Perdana</string>

    <string name="routeA">A = BRI</string>
    <string name="routeB">B = Bundaran Masjid</string>
    <string name="routeC">C =  T. Lingkungan</string>
    <string name="routeD">D = Rektorat</string>
    <string name="routeE">E = SCC</string>
    <string name="routeF">F = MIPA Tower</string>
    <string name="routeG">G = T. Elektro</string>
    <string name="routeH">H = Urban Farming</string>
    <string name="routeI">I = Blok U</string>
    <string name="routeJ">J = T. Perkapalan</string>
    <string name="routeK">K = T. Informatika</string>
    <string name="routeL">L = Despro</string>
    <string name="routeM">M = Robotika</string>
    <string name="routeN">N = BPPT</string>
    <string name="routeO">O = Blok U</string>
    <string name="routeP">P = Blok T</string>
    <string name="routeQ">Q = Pertigaan T. Elektro</string>
    <string name="routeR">R = K1 Mart</string>
    <string name="route1">1 = Asrama Mahasiswa</string>
    <string name="route2">2 = Asrama Politeknik</string>
    <string name="routeNB">NB : Setiap bus stop akan dilalui bus setiap 25–30 menit</string>

</resources>
