<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mobile.maps.itsbustracker.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageButton
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:src="@drawable/btn_up"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:layout_marginEnd="20dp"
            android:onClick="upHandler"/>

        <TextView
            android:id="@+id/titleAbout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_activity_about"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/tvTitleVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_about_version"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvTitleTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_team"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTeam1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team1"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tvTeam2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team2"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tvTeam3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team3"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tvTeam4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team4"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tvTeam5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team5"
            android:textColor="#ffffff"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>
