<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jadwal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobile.maps.itsbustracker.Jadwal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSchedule"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:src="@drawable/btn_up"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:layout_marginRight="20dp"
            android:onClick="upHandler"/>

        <TextView
            android:id="@+id/titleSchedule"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_activity_schedule"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:src="@drawable/route"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/tvRoute1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/route1"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRoute2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/route2"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeA"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteJ"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeJ"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeB"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteK"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeK"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteC"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeC"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteL"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeL"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeD"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeM"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteE"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeE"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeN"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeF"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteO"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeO"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteG"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeG"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeP"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteH"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeH"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteQ"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeQ"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/tvRouteI"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeI"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/tvRouteR"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/routeR"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvNB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/routeNB"
                    android:textColor="#ffffff"
                    android:paddingRight="30dp"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>