<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mobile.maps.itsbustracker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingRight="70dp"
        android:paddingLeft="70dp"
        android:paddingTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_home"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/btnMaps"
                    android:src="@drawable/menutrack"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTrack"
                    android:text="@string/menuTrack"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/btnSchedule"
                    android:src="@drawable/menuschedule"
                    android:onClick="intent_jadwal"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSchedule"
                    android:text="@string/menuSchedule"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:onClick="intent_jadwal"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/btnAbout"
                    android:src="@drawable/menuabout"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="5dp"
                    android:onClick="intent_about"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAbout"
                    android:text="@string/menuAbout"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/btnSetting"
                    android:src="@drawable/menusetting"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="5dp"
                    android:onClick="intent_setting"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSetting"
                    android:text="@string/menuSetting"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>